refactor(owlery): Покрытие OwlLoader логами